align content fix

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -727,8 +727,8 @@ body::-webkit-scrollbar{
   padding-bottom: 0;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  /* justify-content: center;
+  align-items: center; */
 }
 
 .factory-inner-container-mobile {
@@ -737,8 +737,8 @@ body::-webkit-scrollbar{
   margin-top: 0px;
   padding: 0px;
   overflow-y: auto;
-  justify-content: center;
-  align-items: center;
+  /* justify-content: center;
+  align-items: center; */
 }
 
 .header-title {
